...
                                android:text="@string/profile_name_phone_text"
                                android:textAppearance="?textAppearanceBody1" />

                            <!-- There is lots you can do with the native controls -->
                            <!-- https://material.io/develop/android/components/text-input-layout/ -->
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/name_editlayout"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:hint="@string/profile_nickname_hint"
                                app:counterEnabled="true"
                                app:counterMaxLength="10">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/name_edit"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:focusable="true"
                                    android:inputType="textPersonName"
                                    android:maxLength="20" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/phone_editlayout"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:hint="@string/profile_phone_hint">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/phone_edit"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:focusable="true"
                                    android:inputType="phone"
                                    android:maxLength="14" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/password_editlayout"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:hint="@string/enter_a_password"
                                app:passwordToggleEnabled="true">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/password_edit"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:focusable="true"
                                    android:inputType="textPassword"
                                    android:maxLength="8" />
                            </com.google.android.material.textfield.TextInputLayout>
...
            app:fabAlignmentMode="center"
            app:fabCradleMargin="8dp"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
            app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/user_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="?attr/colorSecondary"
            app:layout_anchor="@+id/bottom_appbar"
            app:srcCompat="@drawable/vct_save"
            app:tint="?attr/colorOnSecondary" />
...
